Regression: UV editing using data of wrong UV layer #106628

Closed
opened 2023-04-06 16:29:10 +02:00 by Simon Thommes · 4 comments
Member

System Information
Operating system: Linux-5.17.15-76051715-generic-x86_64-with-glibc2.35 64 Bits, X11 UI
Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.48.07

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-04-06 13:30, hash: 65da3a3c5ab2
Worked: 3.6.0 Alpha, , branch: main, commit date: 2023-04-03 10:00, hash: e05010b2f292
Caused by 412b6a8f65

Short description of error
It seems like the data of different UV layers is mangled up together in some way.
bug_UV_editing_broken-2023-04-06_16.26.54.mp4

Exact steps for others to reproduce the error
Unfortunately I don't know how to reproduce the issue from scratch, I only have the file with the faulty mesh:

uv_editing_borked.blend

**System Information** Operating system: Linux-5.17.15-76051715-generic-x86_64-with-glibc2.35 64 Bits, X11 UI Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.48.07 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-04-06 13:30, hash: `65da3a3c5ab2` Worked: 3.6.0 Alpha, , branch: main, commit date: 2023-04-03 10:00, hash: `e05010b2f292` Caused by 412b6a8f651d39487865f5cd8651c3ccbd339a7d **Short description of error** It seems like the data of different UV layers is mangled up together in some way. [bug_UV_editing_broken-2023-04-06_16.26.54.mp4](/attachments/9ae3f9b1-5d2c-4460-a38e-6de0779c1244) **Exact steps for others to reproduce the error** Unfortunately I don't know how to reproduce the issue from scratch, I only have the file with the faulty mesh: [uv_editing_borked.blend](/attachments/b758a091-2ed4-4807-8181-0b6f9b4278f0)
Simon Thommes added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-04-06 16:29:11 +02:00
Author
Member

Just want to remark that this seems to be a recent regression . I added this info in the report:

Worked: 3.6.0 Alpha, , branch: main, commit date: 2023-04-03 10:00, hash: e05010b2f292

Just want to remark that this seems to be a recent regression . I added this info in the report: Worked: 3.6.0 Alpha, , branch: main, commit date: 2023-04-03 10:00, hash: `e05010b2f292`
Pratik Borhade added
Priority
High
and removed
Priority
Normal
labels 2023-04-06 17:38:14 +02:00
Pratik Borhade changed title from UV editing using data of wrong UV layer to Regression: UV editing using data of wrong UV layer 2023-04-06 17:38:25 +02:00
Member

Caused by 412b6a8f65
@Baardaap ^

Caused by 412b6a8f651d39487865f5cd8651c3ccbd339a7d @Baardaap ^

ugh. My fix of this problem made it worse?

For some reason I can't seem to assign this to myself. I'll look into it!

ugh. My fix of this problem made it worse? For some reason I can't seem to assign this to myself. I'll look into it!
Member

I think the mistake might be a confusion between CustomData_get_active_layer and CustomData_get_active_layer_index. I think we want the former in BM_uv_map_get_offsets.

I think the mistake might be a confusion between `CustomData_get_active_layer` and `CustomData_get_active_layer_index`. I think we want the former in `BM_uv_map_get_offsets`.
Martijn Versteegh was assigned by Ray molenkamp 2023-04-06 22:08:47 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-04-06 22:17:31 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#106628
No description provided.