source/blender/bmesh/intern/bmesh_query_uv.cc
@@ -47,7 +47,7 @@ BMUVOffsets BM_uv_map_get_offsets_n(const BMesh *bm, const int layer)
 BMUVOffsets BM_uv_map_get_offsets(const BMesh *bm)
 {
   return BM_uv_map_get_offsets_n(bm,
-                                 CustomData_get_active_layer_index(&bm->ldata, CD_PROP_FLOAT2));
+                                 CustomData_get_active_layer(&bm->ldata, CD_PROP_FLOAT2));
 }
 
 static void uv_aspect(const BMLoop *l,
